--- a/gui/views/FAQ.html
+++ b/gui/views/FAQ.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="../resources/css/prisa.css">
         <title>FAQ</title>
     </head>
     <body>
@@ -32,5 +33,9 @@
                 </ul>
             </div>
         </nav>
+        <div class="container">
+            <p>Person Re-Identification System, Version 1.0 - source is available upon 
+            request by email at da96639@live.missouristate.edu.</p>
+        </div>
     </body>
 </html>
