update color scheme and style export VIRTUALENVWRAPPER_PYTHON=/usr/local/bin/python3 source /usr/local/bin/virtualenvwrapper.sh
export VIRTUALENVWRAPPER_PYTHON=/usr/local/bin/python3
source /usr/local/bin/virtualenvwrapper.sh

--- a/gui/resources/css/prisa.css
+++ b/gui/resources/css/prisa.css
@@ -2,8 +2,17 @@
     border: .25em solid black;
     position: center;
     text-align: center;
+    border-top: none;
+}
+
+.container ul {
+    text-align: left;
 }
 
 .justify-content-center {
     text-align: left;
+}
+
+.navbar-dark {
+    background-color: blueviolet;
 }
