--- a/gui/views/Contact.html
+++ b/gui/views/Contact.html
@@ -8,7 +8,7 @@
         <title>Contact</title>
     </head>
     <body>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">PRISA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,8 +34,10 @@
             </div>
         </nav>
         <div class="container">
-            <p>Person Re-Identification System, Version 1.0 - source is available upon request by email at
-            da96639@live.missouristate.edu.</p>
+            <ul>
+                Contact for source code:
+                <li>Email at: da96639@live.missouristate.edu</li>
+            </ul> 
         </div>
     </body>
 </html>
