--- a/gui/views/FAQ.html
+++ b/gui/views/FAQ.html
@@ -8,7 +8,7 @@
         <title>FAQ</title>
     </head>
     <body>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">PRISA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,8 +34,15 @@
             </div>
         </nav>
         <div class="container">
-            <p>Person Re-Identification System, Version 1.0 - source is available upon 
-            request by email at da96639@live.missouristate.edu.</p>
+            <b>Frequently Asked Questions</b>
+            <ul>
+                What does PRIS/A stand for?
+                <li>Person Re-Identification System (Application)</li>
+                What version is the software?
+                <li>PRISA is currently in Version 1.0</li>
+                Can I use the PRIS software?
+                <li>Currently by request, source is available by email at da96639@live.missouristate.edu</li>
+            </ul>
         </div>
     </body>
 </html>
