--- a/gui/views/Upload.html
+++ b/gui/views/Upload.html
@@ -8,7 +8,7 @@
         <title>Upload</title>
     </head>
     <body>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">PRISA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
