--- a/gui/views/layout.html
+++ b/gui/views/layout.html
@@ -33,19 +33,32 @@
                 </ul>
              </div>
         </nav>
-
         <div class="container">
             <h1>How to use PRISA</h1>
-            <div class="d-flex p-2 justify-content-center">
+            <b>To upload video or images:</b>
+            <div class="d-flex p-2">
                 <ol>
-                    <li>Open the webpage</li>
-                    <li>Do the thing</li>
-                    <li>??</li>
-                    <li>Profit!</li>
+                    <li>Click on 'Upload' menu option</li>
+                    <li>Note: PRISA only accepts .avi or .jpg file formats</li>
+                    <li></li>
+                    <li></li>         
+                </ol>
+            </div>
+            <b>To find matches:</b>
+            <div class="d-flex p-2">
+                <ol>
+                    <li>Click on 'Upload' menu option</li>
+                    <li>Note: PRISA only accepts .avi or .jpg file formats</li>
+                    <li></li>
+                    <li></li>         
                 </ol>
             </div>
         </div>
-
+        <footer class="page-footer font-small indigo">
+            <div class="footer-copyright text-center py-3">
+                PRISA Version 1.0, 2019
+            </div>
+        </footer>
         <!-- For Bootstrap -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
