--- a/gui/views/About.html
+++ b/gui/views/About.html
@@ -34,7 +34,18 @@
             </div>
         </nav>
         <div class="container">
-            <p>The Person Re-Identification System Application (PRISA) is the</p>
+            <p>The Person Re-Identification System Application (PRISA) is the practical application derived 
+                from the Person Re-Identification (PRIS) software. It's purpose is to be able to upload
+                videos and images to the PRIS database, allowing PRIS to identify Persons of Interest (POI).
+            </p>
         </div>
+        <footer class="page-footer font-small indigo">
+            <div class="footer-copyright text-center py-3">
+                PRISA Version 1.0, 2019
+            </div>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
