--- a/gui/views/FAQ.html
+++ b/gui/views/FAQ.html
@@ -36,13 +36,23 @@
         <div class="container">
             <b>Frequently Asked Questions</b>
             <ul>
-                What does PRIS/A stand for?
+                What does PRIS(A) stand for?
                 <li>Person Re-Identification System (Application)</li>
+                What is PRIS?
+                <li>PRIS is an identification software created at MSU.</li>
                 What version is the software?
                 <li>PRISA is currently in Version 1.0</li>
-                Can I use the PRIS software?
+                Can I use the PRIS or PRISA software?
                 <li>Currently by request, source is available by email at da96639@live.missouristate.edu</li>
             </ul>
         </div>
+        <footer class="page-footer font-small indigo">
+            <div class="footer-copyright text-center py-3">
+                PRISA Version 1.0, 2019
+            </div>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
