--- a/views/About.ejs
+++ b/views/About.ejs
@@ -3,36 +3,43 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <script src="public/client.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="../resources/css/prisa.css">
-        <title>Upload</title>
+        <link rel="stylesheet" type="text/css" href="public/prisa.css">
+        <title>About</title>
     </head>
     <body>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+        <nav id="hello" class="navbar sticky-top navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">PRISA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav mr-auto">
+                <ul id="hello" class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="layout.html">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Upload.html">Upload</a>
+                    <a class="nav-link" href="Upload">Upload</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="About.html">About</a>
+                    <a class="nav-link" href="About">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="FAQ.html">FAQ</a>
+                    <a class="nav-link" href="FAQ">FAQ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Contact.html">Contact</a>
+                    <a class="nav-link" href="Contact">Contact</a>
                 </li>
                 </ul>
             </div>
         </nav>
+        <div class="container">
+            <p>The Person Re-Identification System Application (PRISA) is the practical application derived 
+                from the Person Re-Identification (PRIS) software. It's purpose is to be able to upload
+                videos and images to the PRIS database, allowing PRIS to identify Persons of Interest (POI).
+            </p>
+        </div>
         <footer class="page-footer font-small indigo">
             <div class="footer-copyright text-center py-3">
                 PRISA Version 1.0, 2019
