--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <script src="public/client.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="../resources/css/prisa.css">
-        <title>Contact</title>
+        <link rel="stylesheet" type="text/css" href="public/prisa.css">
+        <title>FAQ</title>
     </head>
     <body>
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
@@ -16,28 +17,35 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="layout.html">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Upload.html">Upload</a>
+                    <a class="nav-link" href="Upload">Upload</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="About.html">About</a>
+                    <a class="nav-link" href="About">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="FAQ.html">FAQ</a>
+                    <a class="nav-link" href="FAQ">FAQ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Contact.html">Contact</a>
+                    <a class="nav-link" href="Contact">Contact</a>
                 </li>
                 </ul>
             </div>
         </nav>
         <div class="container">
+            <b>Frequently Asked Questions</b>
             <ul>
-                Contact for source code:
-                <li>Email at: da96639@live.missouristate.edu</li>
-            </ul> 
+                What does PRIS(A) stand for?
+                <li>Person Re-Identification System (Application)</li>
+                What is PRIS?
+                <li>PRIS is an identification software created at MSU.</li>
+                What version is the software?
+                <li>PRISA is currently in Version 1.0</li>
+                Can I use the PRIS or PRISA software?
+                <li>Currently by request, source is available by email at da96639@live.missouristate.edu</li>
+            </ul>
         </div>
         <footer class="page-footer font-small indigo">
             <div class="footer-copyright text-center py-3">
