--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <script src="public/client.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="../resources/css/prisa.css">
-        <title>About</title>
+        <link rel="stylesheet" type="text/css" href="public/prisa.css">
+        <title>PRISA Home</title>
     </head>
     <body>
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
@@ -16,34 +17,50 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="layout.html">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Upload.html">Upload</a>
+                    <a class="nav-link" href="Upload">Upload</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="About.html">About</a>
+                    <a class="nav-link" href="About">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="FAQ.html">FAQ</a>
+                    <a class="nav-link" href="FAQ">FAQ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Contact.html">Contact</a>
+                    <a class="nav-link" href="Contact">Contact</a>
                 </li>
                 </ul>
-            </div>
+             </div>
         </nav>
         <div class="container">
-            <p>The Person Re-Identification System Application (PRISA) is the practical application derived 
-                from the Person Re-Identification (PRIS) software. It's purpose is to be able to upload
-                videos and images to the PRIS database, allowing PRIS to identify Persons of Interest (POI).
-            </p>
+            <h1>How to use PRISA</h1>
+            <b>To upload video or images:</b>
+            <div class="d-flex p-2">
+                <ol>
+                    <li>Click on 'Upload' menu option</li>
+                    <li>Note: PRISA only accepts .avi or .jpg file formats</li>
+                    <li></li>
+                    <li></li>         
+                </ol>
+            </div>
+            <b>To find matches:</b>
+            <div class="d-flex p-2">
+                <ol>
+                    <li>Click on 'Upload' menu option</li>
+                    <li>Note: PRISA only accepts .avi or .jpg file formats</li>
+                    <li></li>
+                    <li></li>         
+                </ol>
+            </div>
         </div>
         <footer class="page-footer font-small indigo">
             <div class="footer-copyright text-center py-3">
                 PRISA Version 1.0, 2019
             </div>
         </footer>
+        <!-- For Bootstrap -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
