--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -9,16 +9,16 @@
             <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Upload">Upload</a>
+            <a class="nav-link" href="Upload">Upload</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/About">About</a>
+            <a class="nav-link" href="About">About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/FAQ">FAQ</a>
+            <a class="nav-link" href="FAQ">FAQ</a>
         </li>
         <li class="nav-item">
-                    <a class="nav-link" href="/Contact">Contact</a>
+                    <a class="nav-link" href="Contact">Contact</a>
         </li>
         </ul>
      </div>
