added instructions, upload page accepts only .jpg and .avi formats, worked on css

--- a/resources/css/prisa.css
+++ b/resources/css/prisa.css
@@ -29,6 +29,12 @@ body {
     background-color: black;
 }
 
+form {
+    position: relative;
+    padding: .5em;
+}
+
+
 footer {
     background-color: black;
     color: white;
