--- a/views/Upload.ejs
+++ b/views/Upload.ejs
@@ -34,13 +34,20 @@
                 </ul>
             </div>
         </nav>
-        <div class="progress">
-            <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-          <form method="POST" action="/submit-form">
-            <input type="text" name="username" />
-            <input type="submit" />
-          </form>
+        <div class="container">
+            <div class="progress">
+                <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <form method="POST" action="/submit-form">
+                <input type="text" name="username" />
+                <div class="btn">
+                    <input type="file" multiple accept=".jpg, .avi">
+                </div>
+                <div>
+                    <input type="submit" />
+                </div>
+            </form>
+        </div>
         <footer class="page-footer font-small indigo">
             <div class="footer-copyright text-center py-3">
                 PRISA Version 1.0, 2019
