Fixed Borders on all pages. PRISA in navigation takes you to the home page.

--- a/gui/views/About.ejs
+++ b/gui/views/About.ejs
@@ -14,24 +14,14 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="layout.html">Home<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Upload.html">Upload</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="About.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="FAQ.html">FAQ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Contact.html">Contact</a>
-                </li>
-                </ul>
-            </div>
+                    <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Upload">Upload</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/About">About<span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/FAQ">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Contact">Contact</a></li>
+                    </ul>
+                 </div>
         </nav>
         <div class="container">
             <p>The Person Re-Identification System Application (PRISA) is the</p>
