--- a/gui/views/layout.html
+++ b/gui/views/layout.html
@@ -9,30 +9,24 @@
     </head>
     <body>
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#">PRISA</a>
+            <a class="navbar-brand" href="layout.html" >PRISA</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="layout.html">Home<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Upload.html">Upload</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="About.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="FAQ.html">FAQ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Contact.html">Contact</a>
-                </li>
+                    <li class="nav-item active"><a class="nav-link" href="layout.html">Home<span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="Upload.html">Upload</a></li>
+                    <li class="nav-item"><a class="nav-link" href="About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="FAQ.html">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
                 </ul>
-             </div>
+            </div>
         </nav>
+        <!--For borders -->
+        <div id="left"></div><div id="right"></div>
+        <div id="top"></div><div id="bottom"></div>
+
 
         <div class="container">
             <h1>How to use PRISA</h1>
