--- a/gui/resources/css/prisa.css
+++ b/gui/resources/css/prisa.css
@@ -1,18 +1,47 @@
+* {
+    margin: 0;
+}
+body{
+    background-color: rgb(219, 219, 219);
+}
 .container {
-    border: .25em solid black;
     position: center;
     text-align: center;
     border-top: none;
+    border-bottom: none;
 }
-
 .container ul {
     text-align: left;
+}   
+.button-upload{
+    background-color: rgb(255, 174, 0);
+    border: none;
 }
-
 .justify-content-center {
     text-align: left;
 }
-
 .navbar-dark {
     background-color: blueviolet;
 }
+#top, #bottom, #left, #right {
+	background: black;
+    position: fixed;
+    margin-left: 55px;
+    margin-right: 55px;
+}
+#left, #right {
+    top: 0; bottom: 0;
+    width: .25em;
+}
+#left { left: 0; }
+#right { right: 0; }
+		
+#top, #bottom {
+    left: 0; right: 0;
+    height: 0px;
+}
+#top { 
+    top: 0; 
+
+}
+#bottom { bottom: 0; }
