--- a/views/Upload.ejs
+++ b/views/Upload.ejs
@@ -38,14 +38,10 @@
             <div class="progress">
                 <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <form method="POST" action="/submit-form">
-                <input type="text" name="username" />
-                <div class="btn">
-                    <input type="file" multiple accept=".jpg, .avi">
-                </div>
-                <div>
-                    <input type="submit" />
-                </div>
+            
+            <form action="submit-form" method="post" enctype="multipart/form-data">
+            <input type="file" name="input" multiple="multiple" accept=".avi, .jpg"><br>
+            <input type="submit">
             </form>
         </div>
         <footer class="page-footer font-small indigo">
