How to Instructions

--- a/gui/views/layout.html
+++ b/gui/views/layout.html
@@ -31,14 +31,36 @@
         <div class="container">
             <h1>How to use PRISA</h1>
             <div class="d-flex p-2 justify-content-center">
-                <ol>
-                    <li>Open the webpage</li>
-                    <li>Do the thing</li>
-                    <li>??</li>
-                    <li>Profit!</li>
-                </ol>
+                <article>
+                    <p> 
+                        The Personal Re-Identification System software Application (PRISA) is a graphical user 
+                        interface between the user and the Personal Re-Identification System (PRIS) software 
+                        created at the Missouri State University. It has the ability to recognize the features 
+                        of an individual across different media through algorithm training. Currently PRIS is
+                        the most accurate identification software known.
+                    </p> <br> 
+                    <p>  
+                        To use PRISA, </strong>go to the upload page</strong>. Find and <strong>click on the yellow button labelled "Add Media"</strong> 
+                        to open a File Explorer window. <strong>Navigate through File Explorer</strong> to the destination of the stored 
+                        media. <strong>Choose the image or video</strong> you wish to upload by clicking on it. To upload the image select 
+                        "Open" in the bottom right of the window. You may cancel your upload any time by clicking on
+                        "Cancel" in the lower right corner of the window. You have finished the uploading process.
+                    </p> <br> 
+                    <p>
+                        Once you are done uploading your media PRIS will begin processing your image or video file. 
+                        Once it is done a green box will display at the bottom of the uploads page to alert you. 
+                        The results of the 3 closest matching images in the PRIS database will appear beside the 
+                        uploaded image and ask, "Is this the same person? Click on image(s) to confirm." <strong>Click on 
+                        all images that display the same person that appears in the originally uploaded media</strong>. This 
+                        will create a profile for the person of interest (POI). The profiles in PRISA will associate 
+                        data within PRIS to a specific person.
+                    </p> <br> 
+                </article>
+                
             </div>
         </div>
+
+        
 
         <!-- For Bootstrap -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
