--- a/gui/views/About.html
+++ b/gui/views/About.html
@@ -23,13 +23,22 @@
                 </ul>
             </div>
         </nav>
-        
+
         <!--For borders -->
         <div id="left"></div><div id="right"></div>
         <div id="top"></div><div id="bottom"></div>
 
         <div class="container">
-            <p>The Person Re-Identification System Application (PRISA) is the</p>
+            <article>
+                    <p> 
+                        The Personal Re-Identification System software Application (PRISA) is a graphical user 
+                        interface between the user and the Personal Re-Identification System (PRIS) software 
+                        created at the Missouri State University. It has the ability to recognize the features 
+                        of an individual across different media through algorithm training. Currently PRIS is
+                        the most accurate identification software known.
+                    </p> <br> 
+                    <p>Someone continue this...</p>
+            </article>
         </div>
     </body>
 </html>
