--- a/gui/views/layout.html
+++ b/gui/views/layout.html
@@ -23,11 +23,11 @@
                 </ul>
             </div>
         </nav>
-        <!--For borders -->
+        <!--For borders-->
         <div id="left"></div><div id="right"></div>
         <div id="top"></div><div id="bottom"></div>
 
-
+        <!--Exhaustive instructions on the use of PRISA-->
         <div class="container">
             <h1>How to use PRISA</h1>
             <div class="d-flex p-2 justify-content-center">
