--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,25 +1,15 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="#">PRISA</a>
+    <a class="navbar-brand" href="/">PRISA</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="Upload">Upload</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="About">About</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="FAQ">FAQ</a>
-        </li>
-        <li class="nav-item">
-                    <a class="nav-link" href="Contact">Contact</a>
-        </li>
+            <li class="nav-item active"><a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="Upload">Upload</a></li>
+            <li class="nav-item"><a class="nav-link" href="About">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="FAQ">FAQ</a></li>
+            <li class="nav-item"><a class="nav-link" href="Contact">Contact</a></li>
         </ul>
      </div>
 </nav>
