--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -9,34 +9,7 @@
         <title>Upload</title>
     </head>
     <body>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="/">PRISA</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Upload">Upload</a><span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Query">Query</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="About">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="FAQ">FAQ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Contact">Contact</a>
-                </li>
-                </ul>
-            </div>
-        </nav>
+        <%include navbar.ejs %>
         <div class="container">
             <div class="progress">
                 <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
@@ -51,11 +24,7 @@
                 </div>
             </form>
         </div>
-        <footer class="page-footer font-small indigo">
-            <div class="footer-copyright text-center py-3">
-                PRISA Version 1.0, 2019
-            </div>
-        </footer>
+        <%include Footer.ejs %>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
