--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -7,6 +7,7 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active"><a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a></li>
             <li class="nav-item"><a class="nav-link" href="Upload">Upload</a></li>
+            <li class="nav-item"><a class="nav-link" href="Query">Upload</a></li>
             <li class="nav-item"><a class="nav-link" href="About">About</a></li>
             <li class="nav-item"><a class="nav-link" href="FAQ">FAQ</a></li>
             <li class="nav-item"><a class="nav-link" href="Contact">Contact</a></li>
