standardize Query page, restrict # of files uploaded on the Upload page

--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <script src="public/client.js"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="public/prisa.css">
-        <title>Upload</title>
+        <%include Header.ejs %>
+        <title>Query</title>
     </head>
     <body>
         <%include navbar.ejs %>
@@ -17,7 +13,7 @@
             <form method="POST" action="/submit-form">
                 <input type="text" name="username" />
                 <div class="btn">
-                    <input type="file" multiple accept=".jpg, .avi">
+                    <input type="file" multiple accept=".jpg">
                 </div>
                 <div>
                     <input type="submit" />
@@ -25,8 +21,5 @@
             </form>
         </div>
         <%include Footer.ejs %>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
