added logic to limit number and type of uploads in query and upload

--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -21,5 +21,31 @@
             </form>
         </div>
         <%include Footer.ejs %>
+        <script>
+            $(function() {
+                var // Define maximum number of files.
+                    max_file_number = 1,
+                    // Define your form id or class or just tag.
+                    $form = $('form'), 
+                    // Define your upload field class or id or tag.
+                    $file_upload = $('#upload', $form), 
+                    // Define your submit class or id or tag.
+                    $button = $('.submit', $form); 
+    
+                // Disable submit button on page ready.
+                $button.prop('disabled', 'disabled');
+
+                $file_upload.on('change', function () {
+                    var number_of_images = $(this)[0].files.length;
+                    if (number_of_images > max_file_number) {
+                        alert(`You can upload maximum ${max_file_number} files.`);
+                        $(this).val('');
+                        $button.prop('disabled', 'disabled');
+                    } else {
+                        $button.prop('disabled', false);
+                    }
+                });
+            });
+        </script>
     </body>
 </html>
