--- a/views/Upload.ejs
+++ b/views/Upload.ejs
@@ -10,8 +10,17 @@
             <div class="progress">
                 <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
+            <div>
+                Please select the type of file you would like to upload:
+                <span class="radio">
+                    <label class="radio-inline"><input type="radio" name="optradio" value=".jpg">.jpg</label>
+                </span>
+                <span class="radio">
+                    <label class="radio-inline"><input type="radio" name="optradio" value=".avi">.avi</label>
+                </span>
+            </div>
             <form action="submit-form" method="post" enctype="multipart/form-data">
-                <input type="file" name="input" multiple="multiple" accept=".avi, .jpg" id="upload"><br>
+                <input type="file" name="input" multiple="multiple" id="upload" disabled><br>
                 <input type="submit" class="submit">
             </form>
         </div>
@@ -19,7 +28,7 @@
         <script>
             $(function() {
                 var // Define maximum number of files.
-                    max_file_number = 150,
+                    max_file_number = 0,
                     // Define your form id or class or just tag.
                     $form = $('form'), 
                     // Define your upload field class or id or tag.
@@ -30,6 +39,18 @@
                 // Disable submit button on page ready.
                 $button.prop('disabled', 'disabled');
 
+                $('input[name="optradio"]').change(function() {
+                    let radio_val = $('input[name="optradio"]:checked').val();
+                    $file_upload.removeAttr("disabled");
+                    $file_upload.attr("accept", radio_val);
+                    if (radio_val == ".avi") {
+                        max_file_number = 25;
+                    }
+                    else {
+                        max_file_number = 150;
+                    }
+                });
+
                 $file_upload.on('change', function () {
                     var number_of_images = $(this)[0].files.length;
                     if (number_of_images > max_file_number) {
@@ -38,6 +59,9 @@
                         $button.prop('disabled', 'disabled');
                     } else {
                         $button.prop('disabled', false);
+                    }
+                    if (number_of_images > 0) {
+                        $('input[name="optradio"]').prop('disabled', 'disabled');
                     }
                 });
             });
