improved query code

--- a/views/QueryUpload.ejs
+++ b/views/QueryUpload.ejs
@@ -12,7 +12,7 @@
             </div>
             
             <form action="submit-form" method="post" enctype="multipart/form-data">
-            <input type="file" name="input" upload="multer" multiple="multiple" accept=".avi, .jpg"><br>
+            <input type="file" name="input" upload="multer" accept=".avi, .jpg" multiple /><br>
             <input type="submit">
             </form>
         </div>
