--- a/views/About.ejs
+++ b/views/About.ejs
@@ -7,9 +7,16 @@
     <body>
         <%include navbar.ejs %>
         <div class="container">
-            <p>The Person Re-Identification System Application (PRISA) is the practical application derived 
-                from the Person Re-Identification (PRIS) software. It's purpose is to be able to upload
-                videos and images to the PRIS database, allowing PRIS to identify Persons of Interest (POI).
+            <p>The <strong>Person Re-Identification System Application (PRISA) </strong>is the practical application derived 
+                from the <strong>Person Re-Identification (PRIS) </strong>software. It's purpose is to be able to upload
+                videos and images to the PRIS database, allowing PRIS to identify <strong>Persons of Interest (POI)</strong>.
+            </p>
+            <p>
+                PRIS was created in the 2019 by students in the Computer Science department at <strong>Missouri State 
+                University</strong> as a project envisioned by Dr. Razib Iqbal. PRIS is based on an algorithm that is trained to recognize a person across several media types. It is designed to recognize new people and store information about a POI in it's database.
+            </p>
+            <p>
+                PRISA extends on the capabilities of PRIS by creating profiles for the data so the POI may be identified in different circumstances and body positions. A person is needed to let PRISA know that different data should be in the same profile of an individual POI. Once this is done PRIS can more accurately identify the POI moving forward. As of 2019, <strong>PRIS is currently the most accurate system </strong> for finding POIs across different media platforms.
             </p>
         </div>
         <%include Footer.ejs %>
