--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -7,10 +7,12 @@
     <body>
         <%include navbar.ejs %>
         <div class="container">
-            <ul>
-                Contact for source code:
-                <li>Email at: da96639@live.missouristate.edu</li>
-            </ul> 
+            <p>
+                As of July 2019, source code may be obtained by emailing da96639@live.missouristate.edu. 
+            </p>
+            <p>
+                The continuing status of the PRIS(A) software is research conducted by Dr Razib Iqbal. He may be contacted through the Missouri State University.
+            </p>
         </div>
         <%include Footer.ejs %>
     </body>
