--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -9,14 +9,15 @@
         <div class="container">
             <b>Frequently Asked Questions</b>
             <ul>
-                What does PRIS(A) stand for?
-                <li>Person Re-Identification System (Application)</li>
-                What is PRIS?
-                <li>PRIS is an identification software created at MSU.</li>
-                What version is the software?
-                <li>PRISA is currently in Version 1.0</li>
-                Can I use the PRIS or PRISA software?
-                <li>Currently by request, source is available by email at da96639@live.missouristate.edu</li>
+                <li>What does PRIS(A) stand for?</li>
+                Person Re-Identification System (Application)
+                <li>What is PRIS?</li>
+                PRIS is an identification software created at MSU.
+                <li> What version is the software?</li>
+                PRISA is currently in Version 1.0
+                <li>Can I use the PRIS or PRISA software?</li>
+                Currently by request, source is available by email at da96639@live.missouristate.edu
+
             </ul>
         </div>
         <%include Footer.ejs %>
