--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -8,7 +8,7 @@
         <%include navbar.ejs %>
         <div class="container">
             <b>Frequently Asked Questions</b>
-            <ul>
+            <ul class="faq">
                 <li>What does PRIS(A) stand for?</li>
                 Person Re-Identification System (Application)
                 <li>What is PRIS?</li>
