--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,25 +8,31 @@
         <%include navbar.ejs %>
         <div class="container">
             <h1>How to use PRISA</h1>
-            <b>Workflow:</b>
+            <b>Uploads:</b>
             <div class="d-flex p-2">
                 <ol>
-                    <li>Click on 'Upload' menu option, you will be redirected to the Upload page 
-                        (Note: PRISA only accepts .avi or .jpg file formats).</li>
-                    <li>Once on the Upload page, you will see a progress bar and a field to submit a file(s).</li>
-                    <li>To choose a file(s), click the button labelled, "Choose Files."</li>
-                    <li>There will be a File Explorer pop up in your browser, allowing you to search your computer
-                        for appropriate upload files.
-                    </li>
-                    <li>To select multiple files, hold down the "command" key while clicking.</li>
-                    <li>When finished, click "open" in your file browser with the appropriate file(s) selected.</li>
-                    <li>Your file names should appear to the right of the "Choose Files" button.</li>
-                    <li>When you are ready to submit for upload, click the "Submit" button.</li>
-                    <li>The progress bar will inform you of the upload progress.</li>
-                    <li>Appropriate errors will pop up if there were problems during the upload.</li>
-                    <li>Within 20 seconds per person, per frame, the top possible 3 matches in the PRISA database
-                        will appear on screen.
-                    </li>     
+                    <li><p class="main-list">Click on 'Upload' menu option, you will be redirected to the Upload page (Note: PRISA only accepts .avi or .jpg file formats).
+                    </p></li>
+                    <li><p class="main-list">Once on the Upload page, you will see a progress bar and a field to submit a file(s).  
+                    </p></li>
+                    <li><p class="main-list">To choose a file(s), click the button labelled, "Choose Files."
+                    </p></li>
+                    <li><p class="main-list">There will be a File Explorer pop up in your browser, allowing you to search your computer for appropriate upload files.
+                    </p></li>
+                    <li><p class="main-list">To select multiple files, hold down the "command" key while clicking.
+                    </p></li>
+                    <li><p class="main-list">When finished, click "open" in your file browser with the appropriate file(s) selected.
+                    </p></li>
+                    <li><p class="main-list">Your file names should appear to the right of the "Choose Files" button.
+                    </p></li>
+                    <li><p class="main-list">When you are ready to submit for upload, click the "Submit" button.
+                    </p></li>
+                    <li><p class="main-list">The progress bar will inform you of the upload progress.
+                    </p></li>
+                    <li><p class="main-list">Appropriate errors will pop up if there were problems during the upload.
+                    </p></li>
+                    <li><p class="main-list">Within 20 seconds per person, per frame, the top possible 3 matches in the PRISA database will appear on screen.
+                    </p></li>     
                 </ol>
             </div>
         </div>
