--- a/views/Upload.ejs
+++ b/views/Upload.ejs
@@ -6,21 +6,32 @@
     </head>
     <body>
         <%include navbar.ejs %>
+
+        <br>
+
         <div class="container">
             <div class="progress">
                 <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <div>
-                Please select the type of file you would like to upload:
-                <span class="radio">
-                    <label class="radio-inline"><input type="radio" name="optradio" value=".jpg">.jpg</label>
-                </span>
-                <span class="radio">
-                    <label class="radio-inline"><input type="radio" name="optradio" value=".avi">.avi</label>
-                </span>
-            </div>
+            <!--New Upload Bar-->
+            Please select the type of file you would like to upload:
+            <span class="radio"><label class="radio-inline"><input type="radio" name="optradio" value=".jpg">.jpg</label>
+            </span>
+            <span class="radio"><label class="radio-inline"><input type="radio" name="optradio" value=".avi">.avi</label>
+            </span>
+            
             <form action="submit-form" method="post" enctype="multipart/form-data">
-                <input type="file" name="input" multiple="multiple" id="upload" disabled><br>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text submit">Upload</span>
+                    </div>
+                    <div class="custom-file">
+                        <input type="file" name= "input" class="custom-file-input" id="upload"
+                        aria-describedby="inputGroupFileAddon01" disabled>
+                        <label class="custom-file-label" for="inputGroupFile01">Choose File(s)</label>
+                    </div>
+                </div>
+
                 <input type="submit" class="submit">
             </form>
         </div>
@@ -34,7 +45,7 @@
                     // Define your upload field class or id or tag.
                     $file_upload = $('#upload', $form), 
                     // Define your submit class or id or tag.
-                    $button = $('.submit', $form); 
+                    $button = $('.input-group-prepend', $form); 
 
                 // Disable submit button on page ready.
                 $button.prop('disabled', 'disabled');
